syntax = "proto3";
package triatlon.protocol;

option java_package = "triatlon.network.protobuffprotocol";
option java_outer_classname = "TriatlonProtobufs";
option csharp_namespace = "Triatlon.Network.ProtobufProtocol";

// Entity messages
message Arbitru {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
}

message Participant {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message TipProba {
  string denumire = 1;
}

message Proba {
  int32 id = 1;
  TipProba tipProba = 2;
  Arbitru arbitru = 3;
}

message Rezultat {
  int32 id = 1;
  Participant participant = 2;
  Arbitru arbitru = 3;
  TipProba tipProba = 4;
  int32 punctaj = 5;
}

// Request message
message Request {
  enum Type {
    UNKNOWN_REQUEST = 0;
    LOGIN = 1;
    LOGOUT = 2;
    REGISTER = 3;
    GET_LOGGED_REFREES = 4;
    ADD_RESULT = 5;
    GET_RESULTS_FOR_PROBA = 6;
    GET_ALL_RESULTS = 7;
    GET_ALL_PARTICIPANTS = 8;
    CALCULATE_TOTAL_SCORE = 9;
    GET_ALL_PROBE = 10;
    FIND_ARBITRU = 11;
    GET_PROBA_FOR_ARBITRU = 12;
  }

  Type type = 1;

  // Request payload fields
  Arbitru arbitru = 2;
  Participant participant = 3;
  TipProba tipProba = 4;
  int32 punctaj = 5;
  string username = 6;
  string password = 7;

}

// Response message
message Response {
  enum Type {
    UNKNOWN_RESPONSE = 0;
    OK = 1;
    ERROR = 2;
    GET_LOGGED_REFREES = 3;
    REFREE_LOGGED_IN = 4;
    REFREE_LOGGED_OUT = 5;
    GET_ALL_RESULTS = 6;
    RESULTAT_ADDED = 7;
    GET_ALL_PARTICIPANTS = 8;
    GET_RESULTS_FOR_PROBA = 9;
    GET_PROBA_FOR_ARBITRU = 10;
    GET_ALL_PROBE = 11;
    FIND_ARBITRU = 12;
  }

  Type type = 1;

  // Response payload fields
  string error = 2;
  Arbitru arbitru = 3;
  repeated Participant participants = 4;
  repeated Rezultat rezultate = 5;
  repeated Proba probe = 6;
  Rezultat rezultat = 7;
  TipProba tipProba = 8;
  int32 totalScore = 9;
}